--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq expect
   - git clone https://github.com/sstephenson/bats.git
+before_script:
+  - export PATH="${HOME}/awesome-shell/:${PATH}"
 script: bats/bin/bats --tap tests/
 notifications:
   email:
