--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - git clone https://github.com/sstephenson/bats.git
 before_script:
   - export PATH=$PATH:$PWD/antontsv/awesome-shell/
-script: bats/bin/bats --tap tests/
+script: ls $PWD && ls /tmp && env && bats/bin/bats --tap tests/
 notifications:
   email:
     on_success: never
