--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq expect
   - git clone https://github.com/sstephenson/bats.git
+  - git fetch --unshallow --tags
 before_script:
   - export PATH=$PATH:$PWD
 script: bats/bin/bats --tap tests/
